git commit -a -m "Add a new role for netlify-cms git gateway"

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.323);
     display: flex;
     flex-direction: column;
-    gap: 25px;
+    gap: 15px;
     width: 300px;
 }
 
@@ -94,3 +94,18 @@ button:hover {
     transform: scale(1.05);
 }
 
+#copyright {
+    background-color:#262626;
+    color: white;
+    padding: 15px;
+    text-align: center;
+}
+
+#copyright a {
+    color: var(--primary-color);
+}
+
+#resultado{
+    text-align: center;
+    font-size: 25px;
+}
